--- a/test/index.html
+++ b/test/index.html
@@ -13,6 +13,7 @@
 
 <body>
   <div id="app"></div>
-  <script src="/static/dist/app.js"></script>
+  <script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
+  <script defer src="/static/dist/app.js"></script>
 </body>
 </html>
